--- a/app/css/style.css
+++ b/app/css/style.css
@@ -21,27 +21,38 @@ body,
 	min-width: 400px;
 	flex: 1;
 	overflow-y: auto;
+	background-color: #f3f6f8;
 }
-	#notes #title {
+	#notes:before {
+		content: "Место для ваших заметок";
+		position: absolute;
+		top: 0px;
+		left: 0px;
 		width: 100%;
-		height: 80px;
-		background-color: #E6E8F0;
+		height: 100%;
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		font-size: 30px;
+		color: grey;
 	}
 	.note {
 		display: flex;
 		flex-direction: column;
 		justify-content: space-around;
-		width: 100%;
 		min-height: 170px;
-		border-bottom: solid 1px grey;
+		border-radius: 10px;
+		background-color: white;
+		margin: 15px;
+		box-sizing: border-box;
+		position: relative;
+		transition: .3s ease-in;
 	}
 		.note:hover {
 			background-color: #E3EEF4;
 			cursor: pointer;
+		}
+		.note.onShow {
+			background-color: #9ffbcc;
 		}
 		.note .title {
 			margin-left: 20px;
@@ -74,15 +85,20 @@ body,
 	width: 800px;
 	height: 580px;
 	background-color: #F3F6F8;
-	border-radius: 3px;
+	border-radius: 15px;
 	z-index: 999;
 	position: fixed;
 	top: calc(50% - 290px);
 	left: calc(50% - 400px);
 	flex-direction: column;
+	justify-content: space-between;
+	padding: 0px 40px 30px 40px;
+	box-sizing: border-box;
 }
 	#addNode_modal .back {
 		width: 100%;
+		height: 95px;
+		line-height: 95px;
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
@@ -90,40 +106,49 @@ body,
 		#addNode_modal .back .title {
 			font-weight: 600;
 			font-size: 24px;
-			line-height: 16px;
-			margin: 30px 0;
-			margin-left: 5%;
 		}
 		#addNode_modal .back svg {
-			margin: 30px 0;
 			cursor: pointer;
-			margin-right: 5%;
+			border-radius: 50%;
+			padding: 10px;
+			transition: .5s ease-in;
 		}
-	#addNode_modal .input {
-		width: 90%;
-		margin-left: 5%;
+			#addNode_modal .back svg:hover {
+				background-color: #ff9e9e;
+			}
+	#addNode_modal .input input[name='coords'] {
+		width: 100%;
+		background-color: #f3f6f8;
+		border: none;
+		box-shadow: none;
+		font-size: 20px;
+		font-weight: bold;
 	}
-		#addNode_modal .input input[name='coords'] {
-			width: 90%;
-		}
 	#addNode_modal .input p {
 		font-weight: 500;
 		font-size: 16px;
 		line-height: 20px;
 		margin-bottom: 5px;
 	}
-	
+	#addNode_modal .input.textarea {
+		flex: 1;
+		display: flex;
+		flex-direction: column;
+	}
     #addNode_modal textarea {
-    	width: 90%;
-    	resize: vertical;
+    	width: 100%;
+    	border-radius: 10px;
+    	border: none;
+    	resize: none;
     	max-height: 275px;
-    	
+    	flex: 1;
+    	box-sizing: border-box;
+    	padding: 10px 20px;
+    	font-size: 20px;
     }
     #addNode_modal #save {
-    	margin-top: 24px;
     	outline: none;
     	border: none;
-    	margin-left: 5%;
     	width: 155px;
 		height: 40px;
 		border-radius: 20px;
